# django-saml-sp

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
sp/: __init__.py  admin.py  apps.py  backends.py  models.py  urls.py  utils.py  views.py
sp/migrations/: 0001_initial.py  0001_squashed_0005_auto_20210323_1526.py  0001_squashed_0011_alter_idp_url_params.py  0002_auto_20191205_1758.py  0002_idpattribute_always_update.py  0003_auto_20200331_1934.py  0003_idpuserdefaultvalue.py  0004_auto_20200401_1328.py  0005_auto_20210323_1526.py  0006_remove_idp_slug.py  0007_auto_20210323_1535.py  0008_auto_20210323_1644.py  0009_idpuser.py  0010_auto_20210326_1923.py  0011_alter_idp_url_params.py  0011_idp_require_attributes.py  0012_idp_authn_comparison_idp_authn_context.py  0013_idp_prepare_request_method_idp_update_user_method.py  0014_alter_idp_options_idp_sort_order.py  0015_idp_logout_request_signed_idp_logout_response_signed.py
sp/templates/admin/sp/idp/: change_form.html
sp/templates/sp/: error.html  test.html  unauth.html
testapp/: settings.py  urls.py  views.py  wsgi.py
testapp/management/commands/: bootstrap.py
testapp/templates/: home.html
