[metadata]
name = django-saml-sp
version = attr: sp.__version__
url = https://github.com/imsweb/django-saml-sp
author = Dan Watson
author_email = watsond@imsweb.com
description = A Django application for running one or more SAML service providers (SP).
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Source = https://github.com/imsweb/django-saml-sp

[options]
python_requires = >=3.6
packages = sp, sp.migrations
include_package_data = true
zip_safe = false
install_requires =
    cryptography
    python3-saml

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist
ignore = E231,W503

[isort]
profile = black
